<resources>
    <string name="app_name">WinRah</string>
    <string name="home">Home</string>
    <string name="section">Section</string>
    <string name="deposit">Deposit</string>
    <string name="sections">Sections</string>
    <string name="deposits">Deposits</string>
    <string name="add">Add</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reference">Reference</string>
    <string name="box_color">Box Color</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="product">Product</string>
    <string name="add_deposit">Add deposit</string>
    <string name="name">Name</string>
    <string name="enter_deposit_name">Enter deposit name</string>
    <string name="add_section">Add section</string>
    <string name="select_deposit">Select a deposit</string>
    <string name="enter_section_name">Enter section name</string>
    <string name="add_product">Add product</string>
    <string name="section_created">Section was successfully created</string>
    <string name="deposit_created">Deposit was successfully created</string>
    <string name="select_section">Select a section</string>
    <string name="product_cannot_be_created">Reference and Section cannot be empty</string>
    <string name="product_created">Product was successfully created.</string>
</resources>