<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbarCL"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbarTV"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCL">

        <EditText
            android:id="@+id/referenceET"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:drawableStart="@drawable/ic_reference_24_grey"
            android:drawablePadding="8dp"
            android:hint="@string/reference" />

        <EditText
            android:id="@+id/priceET"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:drawableStart="@drawable/ic_price_24_grey"
            android:drawablePadding="8dp"
            android:inputType="number"
            android:hint="@string/price" />

        <EditText
            android:id="@+id/boxColorET"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:drawableStart="@drawable/ic_box_color_24_grey"
            android:drawablePadding="8dp"
            android:hint="@string/box_color" />

        <TextView
            android:id="@+id/depositTV"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:background="@drawable/shape_01"
            android:hint="@string/deposit"
            app:drawableStartCompat="@drawable/ic_warehouse_24_grey"
            app:drawableEndCompat="@drawable/ic_arrow_dropdown_24_grey" />

        <TextView
            android:id="@+id/sectionTV"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:background="@drawable/shape_01"
            android:hint="@string/section"
            app:drawableStartCompat="@drawable/ic_section_24_grey"
            app:drawableEndCompat="@drawable/ic_arrow_dropdown_24_grey" />

        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/addBtn"
            android:text="@string/add"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>