<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:contentPadding="8dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/referenceTV"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:padding="8dp"
            android:drawableStart="@drawable/ic_reference_24_grey"
            android:drawablePadding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reference"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/sectionTV"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_section_16_grey"
                android:drawablePadding="8dp"
                android:text="@string/section"/>
            <TextView
                android:id="@+id/priceTV"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:padding="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableStart="@drawable/ic_price_16_grey"
                android:drawablePadding="8dp"
                android:text="@string/price"/>
            <TextView
                android:id="@+id/boxColorTV"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_box_color_16_grey"
                android:drawablePadding="8dp"
                android:text="@string/box_color"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>